# union-find-rust

./: Cargo.toml  index.html  trunk.toml
resources/examples/: best_case_union.txt
src/: lib.rs  main.rs  quick.rs  union_find.rs  weighted_quick.rs
workflows/: deploy.yml
