[package]
name = "union_find_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.35.0"
egui = "0.35.0"
egui-file-dialog = "0.14.1"
include_dir = "0.7.4"
ringbuf = "0.5.0"
strum = "0.28.0"
strum_macros = "0.28.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.58"
web-sys = "0.3.85"
